Modificacion de estilos de los elementos

--- a/style/style.css
+++ b/style/style.css
@@ -16,3 +16,23 @@ div{
     background: #FF4136;
     border: 1px solid #000;
 }
+/*Para encabezado*/
+
+thumb {
+    width: 200px;
+    transition: 300ms all ease;
+}
+
+.grande{
+    width: 400px;
+}
+
+.titulo{
+    border: 1px solid navy;
+    background: #ccc;
+    padding: 10px;
+}
+
+.tituloGrande{
+    font-size: 60px;
+}
